More reworking... build first-party test programs

--- a/apps/gemmini/src/CMakeLists.txt
+++ b/apps/gemmini/src/CMakeLists.txt
@@ -1,7 +1,7 @@
 # ---------------------------------------------------------------------------- #
-# Common helpers
+# Gemmini platform library
 
-add_subdirectory(common)
+add_subdirectory(platform)
 
 
 # ---------------------------------------------------------------------------- #
@@ -9,4 +9,4 @@ add_subdirectory(common)
 
 add_exo_library(gemmini_lib exo/conv.py exo/matmul.py)
 target_include_directories(gemmini_lib SYSTEM PRIVATE "${gemmini-rocc-tests_SOURCE_DIR}")
-target_link_libraries(gemmini_lib PRIVATE exo-gemmini::helpers)
+target_link_libraries(gemmini_lib PUBLIC exo-gemmini::platform)
