Combine into generic runners

--- a/apps/gemmini/test/CMakeLists.txt
+++ b/apps/gemmini/test/CMakeLists.txt
@@ -39,9 +39,10 @@ add_subdirectory(bare-metal)
 add_library(exo-gemmini_helpers helpers.c helpers.h)
 add_library(exo-gemmini::helpers ALIAS exo-gemmini_helpers)
 
-function(add_gemmini_test name)
-    add_executable("${name}" "${name}.c")
+function(add_gemmini_test name source)
+    add_executable("${name}" "${source}")
     target_include_directories("${name}" SYSTEM PRIVATE "${gemmini-rocc-tests_SOURCE_DIR}")
+    target_compile_definitions("${name}" PRIVATE "KERNEL_FN=${name}" ${ARGN})
     target_link_libraries(
         "${name}"
         PRIVATE
@@ -52,12 +53,39 @@ function(add_gemmini_test name)
     add_test(NAME "${name}" COMMAND "${name}")
 endfunction()
 
-add_gemmini_test(conv_3_main)
-add_gemmini_test(conv_17_main)
-add_gemmini_test(conv_30_main)
-add_gemmini_test(matmul_4_main)
-add_gemmini_test(matmul_6_main)
-add_gemmini_test(matmul_14_main)
-add_gemmini_test(matmul_16_main)
-add_gemmini_test(matmul_27_main)
-add_gemmini_test(matmul_512x512x512_main)
+add_gemmini_test(
+    conv_3 run_conv.c
+    BATCH_SIZE=4
+    KERNEL_DIM=3
+    IN_CHANNEL=64
+    IN_DIM=58
+    OUT_CHANNEL=64
+    OUT_DIM=56
+)
+
+add_gemmini_test(
+    conv_17 run_conv.c
+    BATCH_SIZE=4
+    KERNEL_DIM=3
+    IN_CHANNEL=128
+    IN_DIM=30
+    OUT_CHANNEL=128
+    OUT_DIM=28
+)
+
+add_gemmini_test(
+    conv_30 run_conv.c
+    BATCH_SIZE=4
+    KERNEL_DIM=3
+    IN_CHANNEL=256
+    IN_DIM=16
+    OUT_CHANNEL=256
+    OUT_DIM=14
+)
+
+add_gemmini_test(matmul_4  run_matmul.c NN=12544 KK=64   MM=256)
+add_gemmini_test(matmul_6  run_matmul.c NN=12544 KK=256  MM=64 )
+add_gemmini_test(matmul_14 run_matmul.c NN=3136  KK=128  MM=512)
+add_gemmini_test(matmul_16 run_matmul.c NN=3136  KK=512  MM=128)
+add_gemmini_test(matmul_27 run_matmul.c NN=784   KK=1024 MM=256)
+add_gemmini_test(matmul_512x512x512 run_matmul.c NN=512   KK=512  MM=512)
