Format repository, supported with tooling.
This commit reformats the repository using Black, a very popular Python
formatting tool. It also adds pre-commit and GitHub Actions hooks to
automate formatting going forward.

Please run pip install -r requirements.txt and pre-commit install after
pulling this commit.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,3 +8,6 @@ filterwarnings = [
 ]
 norecursedirs = ['dependencies']
 pythonpath = "src/"
+
+[tool.black]
+exclude = '(demo_stage\.py|dependencies/.*)'
