--- a/.github/workflows/linting.yml
+++ b/.github/workflows/linting.yml
@@ -8,13 +8,22 @@ jobs:
       - uses: actions/checkout@v2
         with:
           ref: ${{ github.event.pull_request.head.ref }}
+
+      # Format C files
       - uses: DoozyX/clang-format-lint-action@v0.13
         with:
           source: '.'
           exclude: './dependencies ./tests/gemmini/gemmini-rocc-tests'
           clangFormatVersion: 12
           inplace: ${{ github.event.pull_request.head.repo.full_name == github.repository }}
-      # Only push to internal PRs
+
+      # Format Python files
+      - uses: psf/black@stable
+        with:
+          options: ""
+          version: "22.10.0"
+
+      # Push changes to internal PRs
       - uses: EndBug/add-and-commit@v4
         if: github.event.pull_request.head.repo.full_name == github.repository
         with:
