--- a/requirements.txt
+++ b/requirements.txt
@@ -4,9 +4,11 @@ asdl-adt==0.1.0
 asdl==0.1.5
 astor==0.8.1
 build==0.7.0
+black==22.10.0
 coverage==6.3.2
 jupyter-contrib-nbextensions==0.5.1
 numpy==1.22.3
+pre-commit==2.20.0
 pytest-cov==3.0.0
 pytest==7.1.1
 tox==3.24.5
