--- a/.github/workflows/gemmini.yml
+++ b/.github/workflows/gemmini.yml
@@ -17,6 +17,8 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-python@v2
+        with:
+          python-version: '3.10' 
 
       - name: Install dependencies
         run: |
