--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,20 @@
-Pillow==9.1.1
+# Package requirements
 PySMT==0.9.0
 asdl-adt==0.2.0
-asdl==0.1.5
 astor==0.8.1
-build==0.7.0
+numpy==1.23.4
+yapf==0.32.0
+z3-solver==4.8.15.0
+
+# Developer requirements
+Pillow==9.1.1
+asdl==0.1.5
 black==22.10.0
+build==0.7.0
 coverage==6.3.2
 jupyter-contrib-nbextensions==0.5.1
-numpy==1.23.4
 pre-commit==2.20.0
 pytest-cov==3.0.0
 pytest-xdist==3.0.2
 pytest==7.1.1
 tox==3.24.5
-yapf==0.32.0
-z3-solver==4.8.15.0
