--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ jupyter-contrib-nbextensions==0.5.1
 numpy==1.23.4
 pre-commit==2.20.0
 pytest-cov==3.0.0
+pytest-subtests==0.9.0
 pytest-xdist==3.0.2
 pytest==7.1.1
 tox==3.24.5
