Move Exo cmake files to "data_files" section.
This enables finding Exo from inside a virtual environment
without first finding Python. This is a big UX boost.

Now you can just write:

    find_package(Exo REQUIRED)

Instead of:

    find_package(Python 3.9 REQUIRED)
    find_package(Exo REQUIRED HINTS "${Python_SITELIB}")

--- a/setup.cfg
+++ b/setup.cfg
@@ -48,11 +48,14 @@ install_requires =
 where = src
 
 [options.package_data]
-exo =
-    cmake/*
 exo.libs =
     *.c
+    *.h
 
 [options.entry_points]
 console_scripts =
     exocc = exo.main:main
+
+[options.data_files]
+share/exo/cmake =
+    src/exo/cmake/*.cmake
