Convert uses of add_exo_library

--- a/apps/aarch64/sgemm/CMakeLists.txt
+++ b/apps/aarch64/sgemm/CMakeLists.txt
@@ -20,7 +20,10 @@ find_package(Exo REQUIRED)
 # ---------------------------------------------------------------------------- #
 # Exo libraries
 
-add_exo_library(sgemm sgemm.py)
+add_exo_library(
+  NAME sgemm
+  SOURCES sgemm.py
+)
 
 # ---------------------------------------------------------------------------- #
 
