--- a/apps/gemmini/src/CMakeLists.txt
+++ b/apps/gemmini/src/CMakeLists.txt
@@ -7,6 +7,9 @@ add_subdirectory(platform)
 # ---------------------------------------------------------------------------- #
 # Exo implementations
 
-add_exo_library(gemmini_lib exo/conv.py exo/matmul.py)
+add_exo_library(
+  NAME gemmini_lib
+  SOURCES exo/conv.py exo/matmul.py
+)
 target_include_directories(gemmini_lib SYSTEM PRIVATE "${gemmini-rocc-tests_SOURCE_DIR}")
 target_link_libraries(gemmini_lib PUBLIC exo-gemmini::platform)
