--- a/apps/x86/sgemm/CMakeLists.txt
+++ b/apps/x86/sgemm/CMakeLists.txt
@@ -1,7 +1,10 @@
 # ---------------------------------------------------------------------------- #
 # Exo libraries
 
-add_exo_library(sgemm sgemm.py)
+add_exo_library(
+  NAME sgemm
+  SOURCES sgemm.py
+)
 
 
 # ---------------------------------------------------------------------------- #
