--- a/.github/workflows/blas.yml
+++ b/.github/workflows/blas.yml
@@ -52,7 +52,7 @@ jobs:
           token: ${{ secrets.BLAS_GITHUB_TOKEN }}
 
       - name: Temporary branch checkout for CI testing
-        run: git checkout const_float
+        run: cd BLAS ; git checkout const_float
 
       - name: Configure CMake
         run: cmake -B BLAS/build -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}} --preset avx2
