--- a/.github/workflows/blas.yml
+++ b/.github/workflows/blas.yml
@@ -50,9 +50,7 @@ jobs:
         with:
           repository: exo-lang/BLAS
           token: ${{ secrets.BLAS_GITHUB_TOKEN }}
-
-      - name: Temporary branch checkout for CI testing
-        run: cd BLAS ; git checkout const_float
+          ref: 'const_float'
 
       - name: Configure CMake
         run: cmake -B BLAS/build -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}} --preset avx2
