Add self-contained install via nix flake

--- a/.github/workflows/blas.yml
+++ b/.github/workflows/blas.yml
@@ -2,7 +2,15 @@ name: BLAS
 on:
   push:
     branches: [ 'master' ]
+    paths-ignore:
+      - '*.nix'
+      - 'flake.lock'
+      - 'README.md'
   pull_request:
+    paths-ignore:
+      - '*.nix'
+      - 'flake.lock'
+      - 'README.md'
 jobs:
   testing:
     strategy:
