--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,7 +2,15 @@ name: CI
 on:
   push:
     branches: [ 'master' ]
+    paths-ignore:
+      - '*.nix'
+      - 'flake.lock'
+      - 'README.md'
   pull_request:
+    paths-ignore:
+      - '*.nix'
+      - 'flake.lock'
+      - 'README.md'
 jobs:
   build:
     strategy:
