--- a/.github/workflows/linting.yml
+++ b/.github/workflows/linting.yml
@@ -1,6 +1,10 @@
 name: Lint
 on:
   pull_request:
+    paths-ignore:
+      - '*.nix'
+      - 'flake.lock'
+      - 'README.md'
 jobs:
   lint:
     runs-on: ubuntu-latest
