--- a/.github/workflows/blas.yml
+++ b/.github/workflows/blas.yml
@@ -6,7 +6,7 @@ on:
       - '*.nix'
       - 'flake.lock'
       - 'README.md'
-  pull_request_target:
+  pull_request:
     paths-ignore:
       - '*.nix'
       - 'flake.lock'
