--- a/.github/workflows/blas.yml
+++ b/.github/workflows/blas.yml
@@ -39,11 +39,10 @@ jobs:
 
       - name: Install Python dependencies
         run: |
-          python -m pip install -U pip wheel
-          python -m pip install tox==3.24.5
+          python -m pip install -U pip wheel build
 
       - name: Install Exo
-        run: cd ${{github.workspace}}; python -m pip install build ; python -m build . ; python -m pip install dist/*.whl
+        run: python -m build ${{github.workspace}} ; python -m pip install ${{github.workspace}}/dist/*.whl
 
       - name: Install Ninja and git
         run: sudo apt install ninja-build git
