--- a/.github/workflows/linting.yml
+++ b/.github/workflows/linting.yml
@@ -1,10 +1,7 @@
 name: Lint
 on:
   pull_request:
-    paths-ignore:
-      - '*.nix'
-      - 'flake.lock'
-      - 'README.md'
+  pull_request_target:
 jobs:
   lint:
     runs-on: ubuntu-latest
