--- a/.github/workflows/packaging.yml
+++ b/.github/workflows/packaging.yml
@@ -3,7 +3,7 @@ on:
   release:
     types: [ created ]
   push:
-    branches: [ 'master' ]
+    branches: [ 'main' ]
   pull_request:
 jobs:
   deploy:
