--- a/.github/workflows/blas.yml
+++ b/.github/workflows/blas.yml
@@ -17,13 +17,11 @@ jobs:
             CXX: clang++ # This will be system AppleClang
             CLANG: /usr/local/opt/llvm/bin/clang
             PRESET: apple-silicon
-            CMAKE_PREFIX_PATH: /Users/runner/work/exo/exo/benchmark/build
     env:
       CC: ${{matrix.CC}}
       CXX: ${{matrix.CXX}}
       BUILD_TYPE: Release
       CTEST_OUTPUT_ON_FAILURE: 1
-      CMAKE_PREFIX_PATH: ${{matrix.CMAKE_PREFIX_PATH}}
     runs-on: ${{matrix.runner}}
     steps:
       - name: Checkout sources (including submodules)
@@ -59,6 +57,8 @@ jobs:
           path: BLAS-repo
 
       - name: Configure CMake
+        env:
+          CMAKE_PREFIX_PATH: ${{github.workspace}}/benchmark/build
         run: cmake ${{github.workspace}}/BLAS-repo -B ${{github.workspace}}/BLAS-repo/build -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}} --preset ${{matrix.PRESET}}
 
       - name: Build
