--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,17 +7,13 @@ jobs:
   build:
     strategy:
       matrix:
-        runner: [ self-hosted, ubuntu-latest, macos-latest ]
+        runner: [ ubuntu-latest, macos-14 ]
         include:
           - runner: ubuntu-latest
             CC: clang-13
             CXX: clang++-13
             CLANG: clang-13
-          - runner: macos-latest
-            CC: clang # This will be system AppleClang
-            CXX: clang++ # This will be system AppleClang
-            CLANG: /usr/local/opt/llvm/bin/clang
-          - runner: self-hosted
+          - runner: macos-14
             CC: clang # This will be system AppleClang
             CXX: clang++ # This will be system AppleClang
             CLANG: /usr/local/opt/llvm/bin/clang
