--- a/.github/workflows/ExoBLAS.yml
+++ b/.github/workflows/ExoBLAS.yml
@@ -10,4 +10,4 @@ jobs:
     # point to reusable-workflow branch for testing before merging
     uses: exo-lang/ExoBLAS/.github/workflows/test_ExoBLAS.yml@reusable-workflow
     with:
-      exo-ref: ${{ github.event.pull_request.merge_commit_sha }}"
+      exo-ref: ${{ github.event.pull_request.head.ref }}"
