Remove inputs step

--- a/.github/workflows/ExoBLAS.yml
+++ b/.github/workflows/ExoBLAS.yml
@@ -7,23 +7,9 @@ on:
   pull_request:
 
 jobs:
-  prepare-input:
-    runs-on: ubuntu-latest
-    outputs:
-      exo-ref: ${{ steps.set-input.outputs.exo-ref }}
-    steps:
-      - id: set-input
-        run: |
-          if [ "${{ github.event_name }}" = "push" ] && [ "${{ github.ref }}" = "refs/heads/main" ]; then
-            echo "exo-ref=main" >> $GITHUB_ENV
-          elif [ "${{ github.event_name }}" = "pull_request" ]; then
-            echo "exo-ref=${{ github.event.pull_request.merge_commit_sha }}" >> $GITHUB_ENV
-          fi
-        shell: bash
   build-test:
-    needs: prepare-input
     # TODO: change @reusable-workflow to @main
     uses: exo-lang/ExoBLAS/.github/workflows/build-test.yml@reusable-workflow
     with:
-      exo-ref: ${{ needs.prepare-input.outputs.exo-ref }}
+      exo-ref: ${{ github.ref }}
       exo-blas-ref: main
