Revert Nix files

--- a/tox.ini
+++ b/tox.ini
@@ -5,11 +5,10 @@ envlist = py310
 deps =
     # This list is maintained separately from requirements.txt to make it
     # harder to accidentally forget a package dependency in setup.cfg.
-    Pillow
     pytest
     pytest-cov
-    scipy
     torch
+    numpy
 commands = pytest --cov=./ --cov=exo --cov-report=xml -o pythonpath=
 passenv =
     SDE_PATH
