--- a/tox.ini
+++ b/tox.ini
@@ -5,6 +5,7 @@ envlist = py310
 deps =
     # This list is maintained separately from requirements.txt to make it
     # harder to accidentally forget a package dependency in setup.cfg.
+    Pillow
     pytest
     pytest-cov
     torch
