--- a/.github/workflows/gemmini.yml
+++ b/.github/workflows/gemmini.yml
@@ -25,6 +25,7 @@ jobs:
           apt-get remove -y cmake
           apt-get install -y ninja-build
           python -m pip install -r requirements.txt
+          python -m pip install -r dev-requirements.txt
           python -m pip install cmake build
 
       - name: Install exo
