--- a/setup.cfg
+++ b/setup.cfg
@@ -4,11 +4,11 @@ version = attr: exo.__version__
 description = Exo: Exocompiled Array Language
 long_description = file: README.md
 long_description_content_type = text/markdown
-home_page = https://github.com/ChezJRK/exo
+home_page = https://exo-lang.dev/
 ;author = VCLS (Visual Computing Languages & Systems)
 ;author_email = TBD
-maintainer = Alex Reinking
-maintainer_email = alex_reinking@berkeley.edu
+maintainer = Yuka Ikarashi
+maintainer_email = yuka@csail.mit.edu
 license = MIT License
 keywords = exo, exocompilation, array, dsl, language, performance
 python_required =
@@ -38,11 +38,10 @@ package_dir =
     =src
 install_requires =
     PySMT>=0.9
-    asdl-adt>=0.1,<0.2
-    astor>=0.8
-    numpy>=1.21.2
-    yapf>=0.31
-    z3-solver>=4.8.12.0
+    asdl-adt>=0.2
+    asdl>=0.1
+    build>=0.7.0
+    z3-solver>=4.12.6.0
 
 [options.packages.find]
 where = src
