--- a/setup.cfg
+++ b/setup.cfg
@@ -38,8 +38,8 @@ package_dir =
     =src
 install_requires =
     PySMT>=0.9
-    asdl-adt>=0.2
-    asdl>=0.1
+    asdl-adt>=0.1,<0.2
+    asdl>=0.1.5
     build>=0.7.0
     z3-solver>=4.12.6.0
 
