--- a/setup.cfg
+++ b/setup.cfg
@@ -42,6 +42,7 @@ install_requires =
     asdl>=0.1.5
     build>=0.7.0
     z3-solver>=4.12.6.0
+    yapf>=0.32
 
 [options.packages.find]
 where = src
