Update dependencies and requirements (#630)
- Update dependencies in requirements.txt
- Separate requirements.txt for building exo and dev-requirements.txt for developing exo
- Update tox.ini
- Remove Nix flake files

--- a/tox.ini
+++ b/tox.ini
@@ -8,8 +8,7 @@ deps =
     Pillow
     pytest
     pytest-cov
-    scipy
-    torch
+    numpy
 commands = pytest --cov=./ --cov=exo --cov-report=xml -o pythonpath=
 passenv =
     SDE_PATH
