--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -65,3 +65,4 @@ jobs:
         with:
           fail_ci_if_error: true
           token: ${{ secrets.CODECOV_TOKEN }}
+          version: "v0.1.15"
