--- a/.github/workflows/packaging.yml
+++ b/.github/workflows/packaging.yml
@@ -26,5 +26,5 @@ jobs:
         #if: startsWith(github.ref, 'refs/tags')
         uses: pypa/gh-action-pypi-publish@release/v1
         with:
-          skip-existing: true
           password: ${{ secrets.PYPI_API_TOKEN }}
+          verbose: true
