--- a/.github/workflows/packaging.yml
+++ b/.github/workflows/packaging.yml
@@ -23,8 +23,7 @@ jobs:
 
       # Will only run on release.
       - name: Publish distribution to PyPI
-        #if: startsWith(github.ref, 'refs/tags')
+        if: startsWith(github.ref, 'refs/tags')
         uses: pypa/gh-action-pypi-publish@release/v1
         with:
           password: ${{ secrets.PYPI_API_TOKEN }}
-          verbose: true
