--- a/.github/workflows/gemmini.yml
+++ b/.github/workflows/gemmini.yml
@@ -6,7 +6,7 @@ on:
   pull_request:
 jobs:
   gemmini:
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-22.04
 
     container:
       image: ghcr.io/exo-lang/gemmini:latest
@@ -15,15 +15,16 @@ jobs:
         password: ${{ secrets.github_token }}
 
     steps:
-      - uses: actions/checkout@v4
-      - uses: actions/setup-python@v4
+      - name: Setup Python environment
+        uses: actions/setup-python@v4
         with:
           python-version: '3.10'
+          cache: 'pip'
 
       - name: Install dependencies
         run: |
-          apt-get remove -y cmake
-          apt-get install -y ninja-build openssl libssl-dev
+          apt-get update
+          apt-get install -y ninja-build
           python -m pip install -r requirements.txt
           python -m pip install -r dev-requirements.txt
           python -m pip install cmake build
