--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -36,8 +36,7 @@ jobs:
 
       - name: Install Python dependencies
         run: |
-          python -m pip install -U pip wheel
-          python -m pip install tox==3.24.5
+          python -m pip install -r requirements.txt
 
       - name: Get latest CMake and ninja
         uses: lukka/get-cmake@latest
