--- a/.github/workflows/gemmini.yml
+++ b/.github/workflows/gemmini.yml
@@ -15,8 +15,8 @@ jobs:
         password: ${{ secrets.github_token }}
 
     steps:
-      - name: Setup Python environment
-        uses: actions/setup-python@v4
+      - uses: actions/checkout@v4
+      - uses: actions/setup-python@v4
         with:
           python-version: '3.10'
           cache: 'pip'
