--- a/.github/workflows/gemmini.yml
+++ b/.github/workflows/gemmini.yml
@@ -41,10 +41,6 @@ jobs:
           source env.sh
           cd -
           cmake -G Ninja -S apps/gemmini -B build -DCMAKE_BUILD_TYPE=Release
-
-      - name: Build GEMMINI tests
-        run: cmake --build build --verbose
-
-      - name: Run GEMMINI tests
-        run: ctest -V
-        working-directory: build
+          cmake --build build --verbose
+          cd build
+          ctest -V
