--- a/.github/workflows/gemmini.yml
+++ b/.github/workflows/gemmini.yml
@@ -6,7 +6,7 @@ on:
   pull_request:
 jobs:
   gemmini:
-    runs-on: ubuntu-22.04
+    runs-on: ubuntu-22.04-2core
 
     container:
       image: ghcr.io/exo-lang/gemmini:latest
