--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,17 +34,21 @@ jobs:
           python-version: '3.10'
           cache: 'pip'
 
+      - name: Install the latest version of uv
+        uses: astral-sh/setup-uv@v6
+
       - name: Install Python dependencies
-        run: |
-          python -m pip install -U pip wheel
-          python -m pip install tox==3.24.5
+        run: uv sync --all-groups --no-install-project
 
       - name: Get latest CMake and ninja
         uses: lukka/get-cmake@latest
 
       - name: Setup SDE binaries
         if: runner.os != 'macOS'
-        uses: petarpetrovt/setup-sde@v2.3
+        uses: petarpetrovt/setup-sde@v2.4
+        with:
+          environmentVariableName: 'SDE_PATH'
+          sdeVersion: '9.33.0'
 
       - name: Install Clang 17 (Linux)
         if: runner.os == 'Linux'
@@ -58,7 +62,7 @@ jobs:
         run: brew install llvm@17
 
       - name: Run tox
-        run: tox
+        run: uv run tox
 
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v4
